test/fixtures/errors/jade/novar.jade

h1 Hello World
h2= beep
